fixed some overlapping CSS issues

--- a/src/pages/CustomLessonsDisplay/CustomLessonsDisplay.scss
+++ b/src/pages/CustomLessonsDisplay/CustomLessonsDisplay.scss
@@ -34,15 +34,12 @@
   font-weight: bold;
   font-size: 1.5em;
   transition-duration: 0.3s;
+  margin-top: .4em;
+  margin-left: 1em;
   &:hover {
     background-color: $assignments-light-purple;
     color: white;
   }
-}
-
-.dropdown {
-  margin-left: 5%;
-  margin-top: .3em;
 }
 .button {
   background-color: $assignments-light-green;
@@ -50,8 +47,8 @@
     background-color: white;
     color: black;
   }
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: 1em;
+  margin-right: 1em;
   margin-top: .4em;
 }
 .drop-down-bar {
@@ -71,8 +68,6 @@
 }
 
 .icon-margins {
-  // margin-left: 1%;
-  // margin-right: 1%;
   margin: 1%;
 }
 
